# mathutil

./: LICENSE  README.md  pyproject.toml
src/mathextend/: Constant.py  Flat_graphics.py  Fractions.py  Three_dimensional_graphics.py
src/mathextend.egg-info/: PKG-INFO  SOURCES.txt
src/mathutil/: Fractions.py  Three_dimensional_graphics.py
src/mathutil.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
